metadata/force-app/main/default/objects/X12_14__c/X12_14__c.object-meta.xml
<CustomObject>
    <label>12.14</label>
    <nameField>
        <label>12.14 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>12.14</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>