metadata/force-app/main/default/objects/X12_14__c/fields/customobjectpicklistglobal__c.field-meta.xml
<CustomField>
    <fullName>customobjectpicklistglobal__c</fullName>
    <label>customobjectpicklistglobal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__SubscriptionType</valueSetName>
    </valueSet>
</CustomField>