metadata/force-app/main/default/objects/X12_14__c/fields/X12_14checkboxcs__c.field-meta.xml
<CustomField>
    <fullName>X12_14checkboxcs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test</description>
    <label>12.14checkboxcs</label>
    <type>Checkbox</type>
</CustomField>