metadata/force-app/main/default/objects/X12_14__c/fields/X12_14textareacs__c.field-meta.xml
<CustomField>
    <fullName>X12_14textareacs__c</fullName>
    <description>test</description>
    <label>12.14textareacs</label>
    <type>TextArea</type>
</CustomField>