metadata/force-app/main/default/objects/X12_14__c/fields/X12_14textcs__c.field-meta.xml
<CustomField>
    <fullName>X12_14textcs__c</fullName>
    <label>12.14textcs</label>
    <length>40</length>
    <type>Text</type>
</CustomField>