metadata/force-app/main/default/objects/X12_14__c/validationRules/customobjectvalurule.validationRule-meta.xml
<ValidationRule>
    <fullName>customobjectvalurule</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &apos;abc&apos;</errorConditionFormula>
    <errorMessage>error</errorMessage>
</ValidationRule>